--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -2,7 +2,7 @@ name: Build and Deploy Zola site
 
 on:
   workflow_dispatch:
-  # push: { branches: ["main"] }
+  push: { branches: ["main"] }
 
 permissions:
   contents: read
